[project]
name = "route-planning-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.19",
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
]
